# cat-feeder

./: README.md  config.example.yaml  pyproject.toml  requirements.txt
arduino/: cat_feeder.ino
catfeeder/: arduino.py  config.py  display.py  main.py  models.py  processor.py  queue_manager.py  repository.py  sleep.py
catfeeder/arduino/: cat_feeder.ino
catfeeder/sources/: base.py  streamlabs.py
catfeeder/static/css/: donations.css  sleep.css
catfeeder/static/js/: donations.js  sleep.js
catfeeder/templates/: donations.html  sleep_status.html
config/: settings.json
src/cat_feeder/: __init__.py  __main__.py  arduino.py  config.py  donation_manager.py  main.py  models.py  processor.py  queue_manager.py  server.py  sleep.py  storage.py  tiktok.py
src/cat_feeder/static/css/: overlay.css  sleep.css
src/cat_feeder/static/js/: overlay.js  sleep.js
src/cat_feeder/templates/: overlay.html  sleep_mode.html
static/css/: overlay.css  status.css
static/js/: overlay.js
templates/: overlay.html  sleep_status.html
