[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cat-feeder"
version = "0.1.0"
description = "Interactive cat feeder donation queue"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.1",
    "uvicorn[standard]==0.29.0",
    "jinja2==3.1.3",
    "pyserial==3.5",
]

[project.scripts]
cat-feeder = "cat_feeder.__main__:main"
